--- a/src/app/globalFeed/components/feed/feed.component.html
+++ b/src/app/globalFeed/components/feed/feed.component.html
@@ -18,4 +18,9 @@
             </a>
         </div>
     </div>
+    <app-pagination 
+        [limit]="limit"
+        [url]="baseUrl"
+        [currentPage]="currentPage">
+    </app-pagination>
 </div>
