--- a/src/app/globalFeed/components/pagination/pagination.component.html
+++ b/src/app/globalFeed/components/pagination/pagination.component.html
@@ -3,7 +3,9 @@
         <li *ngFor="let page of pages"
             class="pagination-item"
             [ngClass]="{active: currentPageProps === page}">
-            <a [routerLink]="urlProps" [queryParams]="{page: page}">
+            <a class="pagination-link"
+               [routerLink]="urlProps" 
+               [queryParams]="{page: page}">
                 {{ page }}
             </a>
         </li>
