--- a/src/app/globalFeed/components/globalFeedComponent/globalfeed.component.html
+++ b/src/app/globalFeed/components/globalFeedComponent/globalfeed.component.html
@@ -2,6 +2,7 @@
     <div class="home-block">
         <div class="row">
             <div class="col-md-9">
+                <app-feed-toggler></app-feed-toggler>
                 <app-feed [apiUrl]="apiUrl"></app-feed>
             </div>
             <div class="col-md-3">
